# -jmmotaburr-riemann-adelic

./: .dockerignore  .gitignore  .zenodo.json  =0.45.0  A4_IMPLEMENTATION_SUMMARY.md  A4_LEMMA_PROOF.md  ADVANCED_LIBRARIES_INTEGRATION_SUMMARY.md  ADVANCED_LIBRARIES_README.md  AUTHORS_CLARIFICATION.md  BADGES_UPDATE_SUMMARY.md  BADGE_IMPLEMENTATION_SUMMARY.md  BADGE_QUICK_GUIDE.md  BADGE_SYSTEM_DOCUMENTATION.md  BEFORE_AFTER_COMPARISON.md  CHANGELOG.md  CITATION.cff  CI_CD_REPRODUCIBILITY_FIX.md  CI_CD_REPRODUCIBILITY_SUMMARY.md  CI_METADATA_INFRASTRUCTURE_SUMMARY.md  COMPLETION_REPORT.md  COMPREHENSIVE_ENHANCEMENT_SUMMARY.md  CONTRIBUTING.md  CORONACION_V5_SUMMARY.md  CORRECTIONS_README.md  CRITICAL_ASSESSMENT.md  CRITICAL_LINE_PROOF_IMPLEMENTATION.md  DELIVERY_CHECKLIST.md  Dockerfile  Evac_Rpsi_data.csv  FINALIZATION_SUMMARY.md  FINAL_SUMMARY.md  FIXES_SUMMARY.md  FORMALIZATION_STATUS.md  GITHUB_PAGES_FIX_SUMMARY.md  IMPLEMENTATION_COMPLETE.md  IMPLEMENTATION_SUMMARY.md  IMPLEMENTATION_SUMMARY_UNIVERSAL_KERNEL.md  IMPLEMENTATION_V5_3_1.md  ISSUE_RESOLUTION_SUMMARY.md  LEAN4_SKELETON_SUMMARY.md  (+167 more)
.copilot/: instructions.md
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  copilot-instructions.md
api/: README.md
dashboard/: run_dashboard.sh
data/: badge_validation_results.json  coronacion_v5_validation.json  corrected_validation_results.csv  critical_line_verification.csv  d_function_validation_report.md  demo_results.csv  detailed_analysis.json  final_test.csv  mathematical_certificate.json  results.csv  results.md  test_results.csv  v5_coronacion_certificate.json  validation_certificate.json  validation_detailed_output.txt  validation_f1_original.csv  validation_f1_weil.csv  validation_f2_original.csv  validation_f2_weil.csv  validation_f3_original.csv  validation_f3_weil.csv  validation_output.csv  validation_results.csv  validation_results_20250916_195303.csv  validation_results_20250916_195909.csv  validation_results_detailed.csv  validation_results_ref.csv  validation_truncated_gaussian_original.csv  validation_truncated_gaussian_weil.csv  yolo_certificate.json  zeros_checksums.txt
docs/: COMPUTATIONAL_VALIDATION.md  COPILOT_ENHANCEMENTS.md  GITHUB_PAGES_SETUP.md  README.md  execution_summary.txt  formalization.md  index.html  test_validation.html  validation.html  validation_test.html  validation_working.html
examples/: example_sabio_validation.sabio  github_api_example.py  monitor_validations.py  showcase_generator.py  validation_examples.py  validation_results.md
formalization/: README.md
integrations/: README.md
logs/: USAGE_EXAMPLE.md
monitoring/: check_url_similarity.py  fingerprints.json  fingerprints_create.py  run_monitor.py  search_crossref.py  search_github.py
notebooks/: 141hz_validation.ipynb  consciousness_adelic_bridge.ipynb  discrete_symmetry_vacuum_analysis.ipynb  rh_v42_sim.ipynb  validacion_visual_weil.ipynb  validation.ipynb  validation_backup.ipynb  validation_fast.ipynb  validation_old.ipynb
operador/: __init__.py  operador_H.py  operador_H_real.py  test_kernel_adelic.py  tests_operador.py  tests_operador_extended.py
paper/: README.md  growth_and_order.tex  main.tex  section1.tex  section1b.tex  section2.tex  section3.tex  section5.tex  section6.tex  uniqueness_theorem.tex
pillars/: pilar2_poisson_radon.py
public/: README.md  index.html  primes-sample.js  validation-results.js  zeros-sample.js
schema/: README.md  metadata_example.jsonld  natural_numbers.jsonld  riemann_zeta.jsonld  zeta_function.jsonld
scripts/: README.md  aggregate_results.py  ejecutar_validacion_completa.sh  generate_validation_report.py  verify_status.py
spectral_RH/: README.md
tests/: __init__.py  test_a4_lemma.py  test_absoluta_spectral.py  test_adelic_D.py  test_adelic_determinant.py  test_adelic_spectral_ultima.py  test_advanced_libraries.py  test_basic_validation.py  test_calabi_yau_hierarchy.py  test_ci_parameters.py  test_cierre_minimo.py  test_consciousness_bridge.py  test_consummatio_spectralis.py  test_coronacion_v5.py  test_critical_line.py  test_discrete_symmetry_vacuum.py  test_enhanced_mathematics.py  test_explicit_construction.py  (+25 more)
(+206 files in other folders)
